--- a/app/browsebooks/ui5-deploy.yaml
+++ b/app/browsebooks/ui5-deploy.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: browsebooks
+  name: browsebooksfa
 type: application
 resources:
   configuration:
@@ -16,7 +16,7 @@ builder:
     - name: ui5-task-zipper
       afterTask: generateCachebusterInfo
       configuration:
-        archiveName: browsebooks
+        archiveName: browsebooksFA
         relativePaths: true
         additionalFiles:
           - xs-app.json
