--- a/app/content-ingestion/ui5-deploy.yaml
+++ b/app/content-ingestion/ui5-deploy.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: com.scb.treasury.contentingestion
+  name: com.scb.treasury.contentingestionfa
 type: application
 resources:
   configuration:
@@ -16,7 +16,7 @@ builder:
     - name: ui5-task-zipper
       afterTask: generateCachebusterInfo
       configuration:
-        archiveName: comscbtreasurycontentingestion
+        archiveName: comscbtreasurycontentingestionFA
         relativePaths: true
         additionalFiles:
           - xs-app.json
