--- a/app/content-ingestion/ui5.yaml
+++ b/app/content-ingestion/ui5.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: com.scb.treasury.contentingestion
+  name: com.scb.treasury.contentingestionfa
 type: application
 server:
   customMiddleware:
