--- a/app/contentrepository/ui5.yaml
+++ b/app/contentrepository/ui5.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: com.scb.treasury.contentrepository
+  name: com.scb.treasury.contentrepositoryfa
 type: application
 server:
   customMiddleware:
