--- a/app/treasuryui/ui5-deploy.yaml
+++ b/app/treasuryui/ui5-deploy.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: treasuryui
+  name: treasuryuifa
 type: application
 resources:
   configuration:
@@ -16,7 +16,7 @@ builder:
     - name: ui5-task-zipper
       afterTask: generateCachebusterInfo
       configuration:
-        archiveName: treasuryui
+        archiveName: treasuryuiFA
         relativePaths: true
         additionalFiles:
           - xs-app.json
