--- a/app/content-ingestion/xs-app.json
+++ b/app/content-ingestion/xs-app.json
@@ -6,13 +6,13 @@
       "source": "^/odata/v4/catalog/(.*)$",
       "target": "/odata/v4/catalog/$1",
       "authenticationType": "none",
-      "destination": "Treasury-srv-api"
+      "destination": "TreasuryFA-srv-api"
     },
     {
       "source": "^/v2/odata/v4/catalog/(.*)$",
       "target": "/v2/odata/v4/catalog/$1",
       "authenticationType": "none",
-      "destination": "Treasury-srv-api"
+      "destination": "TreasuryFA-srv-api"
     },
         {
       "source": "^/user-api/currentUser$",
