--- a/app/treasuryui/package.json
+++ b/app/treasuryui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "treasuryui",
+  "name": "treasuryuiFA",
   "version": "0.0.1",
   "description": "An SAP Fiori application.",
   "keywords": [
