--- a/app/treasuryui/webapp_old/manifest.json
+++ b/app/treasuryui/webapp_old/manifest.json
@@ -1,7 +1,7 @@
 {
   "_version": "1.65.0",
   "sap.app": {
-    "id": "treasuryui",
+    "id": "treasuryuiFA",
     "type": "application",
     "i18n": "i18n/i18n.properties",
     "applicationVersion": {
@@ -59,7 +59,7 @@
       "i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
         "settings": {
-          "bundleName": "treasuryui.i18n.i18n"
+          "bundleName": "treasuryuiFA.i18n.i18n"
         }
       },
       "": {
@@ -87,9 +87,9 @@
         "transition": "slide",
         "type": "View",
         "viewType": "XML",
-        "path": "treasuryui.view",
+        "path": "treasuryuiFA.view",
         "async": true,
-        "viewPath": "treasuryui.view"
+        "viewPath": "treasuryuiFA.view"
       },
       "routes": [
         {
@@ -108,7 +108,7 @@
       }
     },
     "rootView": {
-      "viewName": "treasuryui.view.App",
+      "viewName": "treasuryuiFA.view.App",
       "type": "XML",
       "id": "App",
       "async": true
@@ -116,6 +116,6 @@
   },
   "sap.cloud": {
     "public": true,
-    "service": "Treasury"
+    "service": "TreasuryFA"
   }
 }
